# AI-powered-Sales-Analytics-Agent

./: .env.example  .gitignore  LICENSE  README.md  app.py  main.py  pyproject.toml
src/: agent.py  config.py  memory.py  observability.py
src/tools/: analytics.py  insights.py  loader.py  profiler.py  validator.py
