[project]
name = "ai-powered-sales-analytics-agent"
version = "0.1.0"
description = "Conversational AI agent for sales data analysis, quality validation, and business intelligence"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Nevedha Ayyanar"}
]
dependencies = [
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "pandas>=2.2.0",
    "gradio>=5.0.0",
    "azure-storage-blob>=12.20.0",
    "mem0ai>=0.1.0",
    "arize-phoenix>=8.0.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "python-dotenv>=1.0.0",
    "anthropic>=0.87.0",
]
